# top-1-unix-dev-eu

02_BuildReq/: hello_world.c
03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile  README  fun.c  outlib.h  prog  prog-so  prog.c
05_Environmental/: CMakeLists.txt  main.c  pcre_util.c  pcre_util.h  util.h
06_Debugging/: main.c
07_DebuggingTracing/: Makefile  wrapper.c
09_I18nL10n/: Makefile.am  guess.pot  guess_ru.po  main.c
11_Toolkit/: Makefile  main.c
